--- a/app/src/main/res/layout/activity_message_detail.xml
+++ b/app/src/main/res/layout/activity_message_detail.xml
@@ -5,10 +5,10 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".DCSSpecActivity">
+        tools:context=".DCSActivity">
 
     <TextView
-            android:id="@+id/text_view_id"
+            android:id="@+id/message_detail"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="hello" />
