--- a/app/src/main/res/layout/message_list_item.xml
+++ b/app/src/main/res/layout/message_list_item.xml
@@ -5,11 +5,12 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        tools:context=".DCSActivity">
 
-    <ListView
-            android:id="@+id/list_view"
+    <TextView
+            android:id="@+id/message_list_text"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:text="hello" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
