--- a/app/src/main/res/layout/activity_dcs_list.xml
+++ b/app/src/main/res/layout/activity_dcs_list.xml
@@ -5,12 +5,11 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".DCSActivity">
+        tools:context=".DCSListActivity">
 
-    <TextView
-            android:id="@+id/dcs_detail"
+    <ListView
+            android:id="@+id/dcs_list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="hello" />
+            android:layout_height="match_parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
