--- a/app/src/main/res/layout/item_dcs_list.xml
+++ b/app/src/main/res/layout/item_dcs_list.xml
@@ -7,10 +7,33 @@
         android:layout_height="match_parent"
         tools:context=".DCSActivity">
 
-    <TextView
-            android:id="@+id/dcs_list_text"
+    <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="hello" />
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+        <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/dcs_code"
+                    android:textStyle="bold"
+                    android:layout_weight="1"/>
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/dcs_group"
+                    android:layout_weight="2"/>
+        </LinearLayout>
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/dcs_members"/>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
