--- a/app/src/main/res/layout/item_dcs_list.xml
+++ b/app/src/main/res/layout/item_dcs_list.xml
@@ -27,6 +27,12 @@
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:id="@+id/dcs_letter"
+                    android:textStyle="bold"
+                    android:layout_weight="1"/>
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:id="@+id/dcs_group"
                     android:layout_weight="2"/>
         </LinearLayout>
