--- a/app/src/main/res/layout/activity_dcs.xml
+++ b/app/src/main/res/layout/activity_dcs.xml
@@ -34,7 +34,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/dcs_group"
-                    android:layout_weight="2"/>
+                    android:layout_weight="2" android:gravity="end"/>
         </LinearLayout>
         <TextView
                 android:layout_width="match_parent"
