--- a/app/src/main/res/menu/dcs_list_menu.xml
+++ b/app/src/main/res/menu/dcs_list_menu.xml
@@ -2,7 +2,7 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
             android:id="@+id/menu_action_messages"
-            android:icon="@drawable/ic_launcher_foreground"
+            android:icon="@drawable/ic_notify"
             app:showAsAction="ifRoom|withText"
             android:onClick="onShowMessagesAction"
             android:title="Messages">
