--- a/app/src/main/res/menu/dcs_list_menu.xml
+++ b/app/src/main/res/menu/dcs_list_menu.xml
@@ -14,4 +14,11 @@
             android:onClick="onShowCommunicateAction"
             android:title="@string/messages">
     </item>
+    <item
+            android:id="@+id/menu_action_settings"
+            android:icon="@drawable/ic_settings"
+            app:showAsAction="ifRoom|withText"
+            android:onClick="onShowSettingsAction"
+            android:title="@string/settings_activity">
+    </item>
 </menu>
