--- a/app/src/main/res/layout/item_dsp_list.xml
+++ b/app/src/main/res/layout/item_dsp_list.xml
@@ -14,6 +14,12 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/name"/>
+        <SeekBar
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/control"/>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
