--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,12 +1,26 @@
 <resources>
-    <!-- Reply Preference -->
-    <string-array name="reply_entries">
-        <item>Reply</item>
-        <item>Reply to all</item>
+    <!-- Mic Gain Preference -->
+    <string-array name="mic_gain_entries">
+        <item>-24 dB</item>
+        <item>-18 dB</item>
+        <item>-12 dB</item>
+        <item>-6 dB</item>
+        <item>0 dB</item>
+        <item>6 dB</item>
+        <item>12 dB</item>
+        <item>18 dB</item>
+        <item>24 dB</item>
     </string-array>
 
-    <string-array name="reply_values">
-        <item>reply</item>
-        <item>reply_all</item>
+    <string-array name="mic_gain_values">
+        <item>-4</item>
+        <item>-3</item>
+        <item>-2</item>
+        <item>-1</item>
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
     </string-array>
 </resources>
