--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -18,19 +18,14 @@
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <PreferenceCategory
-            app:title="@string/messages_header">
-
-        <EditTextPreference
-                app:key="signature"
-                app:title="@string/signature_title"
-                app:useSimpleSummaryProvider="true"/>
+            app:title="@string/mic_header">
 
         <ListPreference
-                app:key="reply"
-                app:title="@string/reply_title"
-                app:entries="@array/reply_entries"
-                app:entryValues="@array/reply_values"
-                app:defaultValue="reply"
+                app:key="mic_gain"
+                app:title="@string/mic_gains"
+                app:entries="@array/mic_gain_entries"
+                app:entryValues="@array/mic_gain_values"
+                app:defaultValue="0"
                 app:useSimpleSummaryProvider="true"/>
 
     </PreferenceCategory>
