--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -23,4 +23,18 @@
         <item>3</item>
         <item>4</item>
     </string-array>
+
+    <string-array name="joystick_entries">
+        <item>SNES USB</item>
+        <item>Logitech</item>
+        <item>PS Original Adapted USB</item>
+        <item>NES USB</item>
+    </string-array>
+
+    <string-array name="joystick_values">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+    </string-array>
 </resources>
